Corregido bug en BlogService (en la creación de la query) Simplificada la gestión de Colaboradores (eliminamos la tabla locale) Dejamos fija la vista "detalle" en el módulo media y desactivamos la vista de thumbnails Textos genéricos en secciones principales

--- a/data/module/AmHome/view/am-home/am-home-module/index.phtml
+++ b/data/module/AmHome/view/am-home/am-home-module/index.phtml
@@ -180,8 +180,8 @@
                         <div class="box-header">
                             <h4 class="box-title">
                                 <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse2">
-                                    Datos Web                                </a>
-                                <a class="btn btn-remove" href="/admin/menu/delete/230"><i class="fa fa-remove"></i></a>
+                                    Datos Web
+                                </a>
                             </h4>
                             <div class="box-tools pull-right">
                                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
@@ -206,34 +206,64 @@
                         <div class="box-header">
                             <h4 class="box-title">
                                 <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse3">
-                                    Colaboradores                                </a>
-                                <a class="btn btn-remove" href="/admin/menu/delete/231"><i class="fa fa-remove"></i></a>
+                                    Colaboradores
+                                </a>
                             </h4>
                             <div class="box-tools pull-right">
                                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
                                 </button>
                             </div>
                         </div>
-                        <div class="box-body"></div>
+                        <div class="box-body">
+                            Gestión de los colaboradores asociados a ABS Consultor. Podremos, añadir, editar o eliminar
+                            colaboradores. Los campos a editar son los siguientes:
+                            <ul>
+                                <li><strong>Nombre</strong>: Nombre de la empresa colaboradora</li>
+                                <li>
+                                    <strong>Logotipo</strong>: Imagen de la empresa colaboradora (será la que se visualize en carrusel de
+                                    imágenes de la sección empresa
+                                </li>
+                                <li><strong>Website</strong>: Sitio web de la empresa colaboradora</li>
+                                <li><strong>Activo:</strong>: Activar o desactivar una empresa colaboradora</li>
+                                <li><strong>Contenido:</strong>: Breve descripción de la empresa</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="panel box box-success collapsed-box" data-id="219">
                         <div class="box-header">
                             <h4 class="box-title">
                                 <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse5">
-                                    Trabajos                                </a>
+                                    Trabajos
+                                </a>
                             </h4>
                             <div class="box-tools pull-right">
                                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
                                 </button>
                             </div>
                         </div>
-                        <div class="box-body"></div>
+                        <div class="box-body">
+                            Para dar de alta un trabajo, es necesario asignarle una categoría. Para acceder
+                            a la gestión de categorías, deplegamos el menú "Trabajos" y pulsamos sobre el
+                            boton "Categorías". Los campos de categoría que podemos editar son los siguientes:
+                            <ul>
+                                <li><strong>Clave</strong>: Nombre único que distingue la categoría del resto</li>
+                                <li><strong>Activo</strong>: Activar o desactivar una categoría. <strong>Importante:</strong>
+                                Si desactivamos una categoría que tiene trabajos asociados, dichos trabajos pasarán
+                                a estar desactivados tambíen, por lo que si intentamos acceder a ellos, la web nos
+                                dará un error 404 (Página no encontrada)
+                                </li>
+                                <li><strong>Título</strong>Nombre de la categoría. Dicho nombre será el que aparezca
+                                en el lateral derecho del listado de trabajos y como sub título en el detalle de un
+                                trabajo</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="panel box box-success collapsed-box" data-id="207">
                         <div class="box-header">
                             <h4 class="box-title">
                                 <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse6">
-                                    Blog                                </a>
+                                    Blog
+                                </a>
                             </h4>
                             <div class="box-tools pull-right">
                                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
@@ -247,7 +277,6 @@
                             <h4 class="box-title">
                                 <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse7">
                                     Megabanners                                </a>
-                                <a class="btn btn-remove" href="/admin/menu/delete/216"><i class="fa fa-remove"></i></a>
                             </h4>
                             <div class="box-tools pull-right">
                                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
@@ -274,7 +303,6 @@
                             <h4 class="box-title">
                                 <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse9">
                                     Páginas Legales                                </a>
-                                <a class="btn btn-remove" href="/admin/menu/delete/218"><i class="fa fa-remove"></i></a>
                             </h4>
                             <div class="box-tools pull-right">
                                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
