--- a/data/module/AmMedia/view/am-media/am-media-module/index.phtml
+++ b/data/module/AmMedia/view/am-media/am-media-module/index.phtml
@@ -47,8 +47,8 @@ $this->headScript()
             </div>
             <a id="upload" name="upload" class="em btn btn-app"><i class="fa fa-upload"></i></a>
             <a id="newfolder" name="newfolder" class="em btn btn-app"><i class="fa fa-folder"></i></a>
-            <button id="grid" class="ON btn btn-default" type="button"><i class="fa fa-th"></i></button>
-            <button id="list" type="button" class="btn btn-default"><i class="fa fa-list"></i></button>
+            <button id="grid" class="OFF btn btn-default hide" type="button"><i class="fa fa-th"></i></button>
+            <button id="list" type="button" class="btn btn-default hide"><i class="fa fa-list"></i></button>
         </form>
 
         <div id="splitter">
