--- a/data/module/Application/view/application/contact/index.phtml
+++ b/data/module/Application/view/application/contact/index.phtml
@@ -21,6 +21,13 @@ $flashMessenger = $this->flashMessenger();
             <div class="col-md-12">
                 <h1><?=$menu->locale->{$lang}[$contact]->name?></h1>
 
+
+                <div class="row intro-section">
+                    <div class="col-xs-12">
+                        <?=$menu->locale->{$lang}[$contact]->content;?>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <?php
