Conectando la tabla languages con el front

--- a/html/absconsultor/css/absconsultor.css
+++ b/html/absconsultor/css/absconsultor.css
@@ -258,11 +258,11 @@ footer .nav.navbar-nav {
     height: 20px;
 }
 
-.flag-icon.flag-icon-es {
+.flag-icon.es_es {
     background-position: 0 0;
 }
 
-.flag-icon.flag-icon-gb {
+.flag-icon.en_en {
     background-position: 0 -20px ;
 }
 
