--- a/data/module/Application/view/layout/front-layout.phtml
+++ b/data/module/Application/view/layout/front-layout.phtml
@@ -40,8 +40,9 @@ echo $this->doctype(); ?>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <?=$menuHelper->render($menu,$lang);?>
-                        <li class="lang"><a href="/es_es"><span class="flag-icon flag-icon-es"></span> </a></li>
-                        <li class="lang"><a href="/en_en"><span class="flag-icon flag-icon-gb"></span> </a></li>
+                        <?php foreach($languages as $langForFlag):?>
+                            <li class="lang"><a href="/<?=$langForFlag->code;?>"><span class="flag-icon <?=$langForFlag->code?>"></span> </a></li>
+                        <?php endforeach?>
                     </ul>
                 </div>
             </div>
