--- a/data/module/Application/view/layout/front-layout.phtml
+++ b/data/module/Application/view/layout/front-layout.phtml
@@ -18,7 +18,7 @@ echo $this->doctype(); ?>
 
         <!-- Le styles -->
         <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.jpg'))
-                        ->prependStylesheet($this->basePath('absconsultor/dist/css/css-dist.css'))
+                        ->prependStylesheet($this->basePath('absconsultor/dist/css/css-dist.css?t='.microtime()))
                         ->prependStylesheet('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans')
         ?>
         <meta name="theme-color" content="#00344F">
@@ -41,7 +41,7 @@ echo $this->doctype(); ?>
                     <ul class="nav navbar-nav">
                         <?=$menuHelper->render($menu,$lang);?>
                         <?php foreach($languages as $langForFlag):?>
-                            <li class="lang"><a href="/<?=$langForFlag->code;?>"><span class="flag-icon <?=$langForFlag->code?>"></span> </a></li>
+                            <!--<li class="lang"><a href="/<?/*=$langForFlag->code;*/?>"><span class="flag-icon <?/*=$langForFlag->code*/?>"></span> </a></li>-->
                         <?php endforeach?>
                     </ul>
                 </div>
