--- a/html/absconsultor/css/masonry.css
+++ b/html/absconsultor/css/masonry.css
@@ -26,6 +26,23 @@
     -webkit-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
 }
+
+.masonry.bordered .brick.video.iframe {
+    position:relative;
+    padding-bottom:56.25%;
+    /*padding-top:30px;*/
+    height:0;
+    overflow:hidden;
+}
+
+.video.iframe iframe, .video.iframe object, .video.iframe embed {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
+
 .masonry .brick:hover img {
     cursor: pointer;
 }
