--- a/data/module/AmYouTube/view/am-you-tube/am-you-tube-module/index.phtml
+++ b/data/module/AmYouTube/view/am-you-tube/am-you-tube-module/index.phtml
@@ -1,4 +1,7 @@
-<?php $this->headTitle($title); ?>
+<?php
+$this->headTitle($title);
+$flash = $this->flashMessenger();
+?>
 
 <div class="row">
     <div class="col-md-12">
@@ -15,6 +18,18 @@
             </div>
 
             <div class="box-body">
+                <?php if($flash->hasErrorMessages()):
+
+                    $errorMessages = $flash->getErrorMessages();
+                    foreach ($errorMessages as $message) :?>
+                        <div class="alert alert-danger alert-dismissible">
+                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                            <h4><i class="icon fa fa-ban"></i> <?=$this->translate($message);?></h4>
+                            <?=$this->translate($message . ' description');?>
+                        </div>
+                    <?php endforeach;?>
+
+                <?php endif;?>
                 <?php
                 /**
                  * NO BORRAR LAS ETIQUETAS DE LA SIGUIENTE TABLA.
