--- a/html/absconsultor/css/home.css
+++ b/html/absconsultor/css/home.css
@@ -35,7 +35,7 @@
     display: block;
 }
 
-.abs .video-wrapper video {
+.abs .video-wrapper .video {
     margin: 0 auto;
     display: block;
     width: 100%;
@@ -45,8 +45,24 @@
     box-shadow: 0px 3px 15px 6px rgba(0,0,0,0.75);
 }
 
+.abs .video-wrapper .video > div {
+    position:relative;
+    padding-bottom:56.25%;
+    /*padding-top:30px;*/
+    height:0;
+    overflow:hidden;
+}
+
+.abs .video-wrapper .video > div iframe {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
+
 @media (min-width: 1025px) {
-    .abs .video-wrapper video {
+    .abs .video-wrapper .video {
         width: 86%;
         max-width: 1170px;
     }
@@ -253,6 +269,48 @@
     /*padding-right: 15px;*/
 }
 
+.abs .home-module .owl-item .item.video {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+}
+
+.abs .home-module .owl-item .item.video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.item.video img {
+    display: block;
+    width: 100%;
+}
+.abs .home-module .owl-item .item.video .youtube-play {
+    position: absolute;
+    width: 100%;
+    height: calc(100% - 40px);
+    color: white;
+    font-size: 45px;
+    top: 0;
+    left: 0;
+}
+
+.youtube-play i.play-button {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    color: #00344F;
+    cursor: pointer;
+}
+
 @media (max-width: 480px) {
 
     .abs .home-module:nth-child(odd) > div:nth-child(2) {
@@ -294,12 +352,6 @@
     .abs .home-module .btn {
         float: right;
     }
-}
-
-.home-module .owl-carousel.owl-theme .owl-controls {
-    position: absolute;
-    bottom: 0;
-    right: 0;
 }
 
 nav.navbar-fixed-top.not-visible {
