--- a/data/module/Application/view/application/job/detail.phtml
+++ b/data/module/Application/view/application/job/detail.phtml
@@ -25,6 +25,7 @@ $carouselHelper = $this->carouselItemHelper();
                         <?php echo $carouselHelper->render($images)?>
                     </div>
                 </div>
+                <?php $this->facebookShareHelper()->render();?>
             </div>
         </div>
     </article>
