--- a/data/module/AmMenu/view/am-menu/am-menu-module/index.phtml
+++ b/data/module/AmMenu/view/am-menu/am-menu-module/index.phtml
@@ -12,48 +12,66 @@ $this->headTitle($title);
                 <h3 class="box-title"><?php echo $this->escapeHtml($title); ?></h3>
             </div>
             <div class="box-body">
-
                 <div class="box-group" id="menu_accordion">
-                    <?php foreach ($entradas as  $i => $entrada) :?>
-                    <div class="panel box box-success collapsed-box" data-id="<?=$entrada->id?>">
-                        <div class="box-header">
-                            <h4 class="box-title">
-                                <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse<?=$i?>">
-                                    <?=$entrada->title;?>
-                                </a>
-                                <?php if (count($entrada->hijos) == 0) :?>
-                                    <a class="btn btn-remove" href="<?php echo $this->url('administrator', array('module' => 'menu','action'=>'delete', 'id' => $entrada->id));?>"><i class="fa fa-remove"></i></a>
-                                <?php endif;?>
-                                <a class="btn" href="<?php echo $this->url('administrator',array('module' => 'menu','action'=>'edit', 'id' => $entrada->id));?>"><i class="fa fa-edit"></i></a>
-                            </h4>
-                            <div class="box-tools pull-right">
-                                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
-                                </button>
+                    <?php foreach ($this->entradas as $i => $entrada) : ?>
+                        <div class="panel box box-success collapsed-box" data-id="<?= $entrada->id ?>">
+                            <div class="box-header">
+                                <h4 class="box-title">
+                                    <a data-toggle="collapse" data-parent="#menu_accordion" href="#collapse<?= $i ?>">
+                                        <?= $entrada->title; ?>
+                                    </a>
+                                    <?php if (count($entrada->hijos) == 0) : ?>
+                                        <a class="btn btn-remove"
+                                           href="<?php echo $this->url('administrator', array('module' => 'menu', 'action' => 'delete', 'id' => $entrada->id)); ?>"><i
+                                                    class="fa fa-remove"></i></a>
+                                    <?php endif; ?>
+                                    <a class="btn"
+                                       href="<?php echo $this->url('administrator', array('module' => 'menu', 'action' => 'edit', 'id' => $entrada->id)); ?>"><i
+                                                class="fa fa-edit"></i></a>
+                                </h4>
+                                <div class="box-tools pull-right">
+                                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i
+                                                class="fa fa-plus"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="box-body">
+                                <div class="form-horizontal">
+                                    <ul id="list-submenu-<?= $i ?>" class="list-group sub-menu">
+                                        <?php if (count($entrada->hijos) > 0) : ?>
+                                            <?php foreach ($entrada->hijos as $k => $hijo) : ?>
+                                                <li class="list-group-item" data-id="<?= $hijo->id ?>">
+                                                    <a class="btn btn-remove"
+                                                       href="<?php echo $this->url('administrator', array('module' => 'menu', 'action' => 'delete', 'id' => $hijo->id)); ?>"><i
+                                                                class="fa fa-remove"></i></a>
+                                                    <a class="btn"
+                                                       href="<?php echo $this->url('administrator', array('module' => 'menu', 'action' => 'edit', 'id' => $hijo->id)); ?>"><i
+                                                                class="fa fa-edit"></i></a>
+                                                    <?= $hijo->title; ?>
+                                                </li>
+                                            <?php endforeach; ?>
+                                        <?php endif; ?>
+                                    </ul>
+                                </div>
+                                <?php
+                                $addSubmenuLink = $this->url('administrator', array(
+                                    'module' => 'menu',
+                                    'action' => 'add',
+                                    'id' => $entrada->id,
+                                    'data' => ($i + 1)
+                                ));
+                                ?>
+                                <a class="btn btn-sm btn-default" href="<?=$addSubmenuLink;?>">Añadir submenú de <?=$entrada->title;?></a>
                             </div>
                         </div>
-                        <div class="box-body">
-                            <div class="form-horizontal">
-                                <ul id="list-submenu-<?=$i?>" class="list-group sub-menu">
-                                    <?php if (count($entrada->hijos) > 0) :?>
-                                        <?php foreach ($entrada->hijos as $k => $hijo) :?>
-                                            <li class="list-group-item" data-id="<?=$hijo->id?>">
-                                                <a class="btn btn-remove" href="<?php echo $this->url('administrator', array('module' => 'menu','action' => 'delete', 'id' => $hijo->id));?>"><i class="fa fa-remove"></i></a>
-                                                <a class="btn" href="<?php echo $this->url('administrator', array('module' => 'menu','action' => 'edit', 'id' => $hijo->id));?>"><i class="fa fa-edit"></i></a>
-                                                <?=$hijo->title;?>
-                                            </li>
-                                        <?php endforeach; ?>
-                                    <?php endif;?>
-                                </ul>
-                            </div>
-                            <a class="btn btn-sm btn-default" href="<?php echo $this->url('administrator',array('module' => 'menu','action'=>'add', 'id' => $entrada->id, 'data' => ($i + 1)));?>">Añadir submenú de <?=$entrada->title;?></a>
-                        </div>
-                    </div>
-                    <?php endforeach;?>
+                    <?php endforeach; ?>
                 </div>
             </div>
 
             <div class="box-footer">
-                <a class="btn btn-primary" href="<?php echo $this->url('administrator', array('module' => 'menu','action'=>'add', 'id' => 0, 'data' => ($i+1)));?>">Nueva sección de menú</a>
+                <a class="btn btn-primary"
+                   href="<?php echo $this->url('administrator', array('module' => 'menu', 'action' => 'add', 'id' => 0, 'data' => ($i + 1))); ?>">Nueva
+                    sección de menú</a>
             </div>
         </div>
     </div>
